--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -1,28 +1,13 @@
 body {
-  width: 400px;
-  height: 450px;
-  overflow-x: hidden;
-}
-
-/*
-body {
-	width: 100vw;
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}*/
-
-.mainBox {
 	width: 400px;
 	height: 450px;
 }
 
 .url_box {
 	text-align:center;
-	width:270px;	
-	height:30px;
+	width:300px;	
+  height:30px;
+  padding-left: 10px;
 }
 
 .url_box:focus {
@@ -89,13 +74,15 @@ body {
 	border-radius: 100%;
 	background: #fff;
 	text-align: center;
-	margin: 0px 0px 0px 0px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.userCircle i {
-	font-size: 30px;
-	line-height: 50px;
-	cursor: pointer;
+.profile_img {
+	width:30px;
+	height:30px;
+
 }
 
 
@@ -150,24 +137,22 @@ body {
 }
 
 .infoBox {
-	width: 400px;
-	height: 600px;
+  text-align: center;
 }
 
 .info_title{
 	color:white;
 	font-size: 17px;
 	margin: 5px 0px 0px 10px;
-	height;
 }
 
 .info_content{
 	color:rgb(208,206,206);
 	margin: 0px 0px 0px 10px;
-	height: 20px;
+	height: 50px;
 }
 
 .info_plus{
-	width: 300px;
-	margin: 50px 0px 0px 50px;
+  width: 300px;
+  margin: 0 auto;
 }
