--- a/src/pages/Info/style.css
+++ b/src/pages/Info/style.css
@@ -1,39 +1,61 @@
 body {
-	width: 400px;
-	height: 600px;
-	text-align: left;
+  width: 400px;
+  height: 600px;
+  text-align: left;
+  padding-top: 85px;
 }
 
 .back {
+  width: 100%;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.65);
+  top: 0;
+  left: 0;
   padding: 0 10px;
+  height: 60px;
 }
 
 .back a {
   font-size: 40px;
   text-decoration: none;
   color: #fff;
+  line-height: 50px;
 }
 
-.knight_title_div{
-	color:white;
-	margin: 0px 0px 0px 10px;
+.infoContainer {
+  padding: 0 10px;
 }
 
-.knight_title_div h2 {
-	font-size: 20px;
+.infoBox {
+  background: rgba(255, 255, 255, 0.75);
+  border-radius: 5px;
+  padding: 10px;
 }
 
-.knight_content_div{
-	color:rgb(208,206,206);
-	margin: 0px 0px 0px 10px;
+.knight_title_div a {
+  color: #000;
 }
 
-.hr_div{
-	padding: 10px 10px;
+.knight_title_div a h2 {
+  font-size: 18px;
+}
+
+.knight_title_div a h2:hover {
+  text-decoration: underline;
+}
+
+.knight_content_div p {
+  margin: 5px 0 0;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.hr_div {
+  padding: 10px 10px;
 }
 
 .hr_div hr {
-	border: none;
-	height: 1px;
-	background: rgb(118, 113, 113);
+  border: none;
+  height: 1px;
+  background: rgb(118, 113, 113);
 }
