--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -10,3 +10,11 @@ body {
   overflow: hidden;
   background: rgb(89,89,89);
 }
+
+a {
+  text-decoration: none;
+}
+
+button:focus {
+  outline: none;
+}
