--- a/src/pages/Login/style.css
+++ b/src/pages/Login/style.css
@@ -92,3 +92,8 @@ body {
 .loginForm .buttonBox button:hover {
   background: rgba(231, 76, 60, 0.8);
 }
+
+.goToSignup {
+  color: #fff;
+  font-weight: bold;
+}
