--- a/src/pages/Eval/style.css
+++ b/src/pages/Eval/style.css
@@ -43,11 +43,12 @@ body {
   background: none;
   border: none;
   cursor: pointer;
+  border-radius: 100%;
 }
 
 .button img {
-  width: 55px;
-  height: 55px;
+  width: 51px;
+  height: 51px;
 }
 
 .text {
@@ -61,6 +62,11 @@ body {
 
 .false {
   color: red;
+}
+
+.clicked img {
+  border-radius: 100%;
+  border: 4px solid#fff!important;
 }
 
 .textareaBox {
