--- a/src/pages/Check/style.css
+++ b/src/pages/Check/style.css
@@ -1,6 +1,6 @@
 body {
-	width: 400px;
-  height: 450px;
+	width: 400px!important;
+  height: 370px!important;
 }
 
 .back {
@@ -29,11 +29,42 @@ body {
   font-size: 20px;
 }
 
-.evalList {
-  padding-top: 65px;
+.sort-line {
+  margin-top: 80px;
   width: 100%;
-  height: 100%;
+  text-align: right;
+  padding-right: 25px;
+}
+
+.sort-line select {
+  width: 100px;
+  height: 30px;
+  font-size: 15px;
+  background: none;
+  border: none;
+  border-bottom: 3px solid #1abc9c;
+  color: #fff;
+  cursor: pointer;
+}
+
+.sort-line select option {
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  cursor: pointer;
+  border: none;
+}
+
+.evalList {
+  width: 100%;
   text-align: center;
+  max-height: 340px;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.evalList::-webkit-scrollbar {
+  display: none;
 }
 
 .evalList .evalBox {
