--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -157,6 +157,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 2px solid rgb(118,113,113);
 }
 
 .infoContainer .topLine h1 {
@@ -164,13 +165,13 @@ body {
   font-size: 20px;
   font-weight: 400;
   height: 36px;
-  border-bottom: 2px solid rgb(118,113,113);
 }
 
 .infoContainer .topLine button {
   width: 25px;
   height: 25px;
   border: none;
+  margin-right: 10px;
   background: none;
   cursor: pointer;
   transform: rotate(0deg);
