--- a/src/pages/Signup/style.css
+++ b/src/pages/Signup/style.css
@@ -1,6 +1,6 @@
 body {
-  width: 400px!important;
-  height: 300px!important;
+  width: 400px !important;
+  height: 300px !important;
   text-align: center;
 }
 
@@ -66,11 +66,13 @@ body {
   border-right: 4px solid #e74c3c;
 }
 
-.signupForm .inputBox input:focus, .signupForm .buttonBox button:focus {
+.signupForm .inputBox input:focus,
+.signupForm .buttonBox button:focus {
   outline: none;
 }
 
-.signupForm .inputBox input, .signupForm .buttonBox button {
+.signupForm .inputBox input,
+.signupForm .buttonBox button {
   border: none;
 }
 
