--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -1,4 +1,6 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -8,14 +10,16 @@
 
 body {
   overflow: hidden;
-  background: rgb(89,89,89);
+  background: rgb(89, 89, 89);
 }
 
 a {
   text-decoration: none;
 }
 
-button:focus, select:focus, input:focus {
+button:focus,
+select:focus,
+input:focus {
   outline: none;
 }
 
@@ -23,7 +27,9 @@ button:focus, select:focus, input:focus {
   from {
     transform: translateY(100px);
     opacity: 0;
-  } to {
+  }
+
+  to {
     transform: none;
     opacity: 1;
   }
